<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:gravity="center"

    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <import type="com.example.android.app.multipleactivity.viewModel.PaymentActivityListenersViewModel"/>
        <import type="com.example.android.app.multipleactivity.library.databinding.converter.PaymenUnitPriceStringConverter"/>
        <import type="com.example.android.app.multipleactivity.library.databinding.converter.PaymentQuantityStringConverter"/>
        <import type="org.csystem.android.activity.viewmodel.LoginInfo"/>
        <import type="com.example.android.app.multipleactivity.viewModel.PaymentInfo"/>

        <variable name="viewModel" type="PaymentActivityListenersViewModel"/>
        <variable name="loginInfo" type="LoginInfo"/>
        <variable name="result" type="String"/>
        <variable name="paymentInfo" type="PaymentInfo"/>


    </data>
    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".PaymentActivity">


        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{loginInfo.username}"
             />

        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{java.time.format.DateTimeFormatter.ofPattern(&quot;dd/MM/yyyy  HH:hh:ss &quot;).format(loginInfo.loginDateTime)  }"
            />

        <Button
            android:id="@+id/clear_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_clear_text"
            android:onClick="@{()-> viewModel.handleclearButton()}"/>

        <EditText
            android:id="@+id/edittext_product_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/edittext_product_name"
            android:text="@={paymentInfo.name}"/>


        <EditText
            android:id="@+id/unit_price_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/edittext_unit_price_hint"
            android:text="@={PaymenUnitPriceStringConverter.toStr(paymentInfo.unitprice)}"/>


        <EditText
            android:id="@+id/unit_quantity_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/edittext_unit_quantity_hint"
            android:text="@={PaymentQuantityStringConverter.toStr(paymentInfo.quantity)}"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:text="@string/button_calculate_text"
            android:onClick="@{()-> viewModel.handleCalculateButton()}"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:text="@string/button_exit_text"
            android:onClick="@{()-> viewModel.handleexitButton()}"/>

        </LinearLayout>

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{result}" />
    </LinearLayout>
</layout>

