<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
    <import type="com.example.android.app.multipleactivity.viewModel.LoginActivityViewModel"></import>
        <variable
            name="vievModel"
            type="LoginActivityViewModel" />
    </data>

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".PaymentActivity">

        <EditText

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:text="@={vievModel.username}"
            android:hint="@string/edittext_username_hint"/>

        <EditText

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:text="@={vievModel.password}"
            android:hint="@string/edittext_password_hint"/>

        <Button

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_login_text"
            android:onClick="@{()->vievModel.handleLoginButton()}"/>
    </LinearLayout>
</layout>